Fix alignment

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body,h1,h2,h3,h4,h5,h6 {
 }
 
 body {
-    background-color: lavenderblush;
+    background-color: whitesmoke;
     text-align: center;
     max-width:1200px;
     margin-top:100px;
@@ -16,7 +16,7 @@ h1 {
 }
 
 h2 {
-  color: brown;
+  color: steelblue;
 }
 
 p {
@@ -26,7 +26,6 @@ p {
 div.gallery {
     margin: 5px;
     border: 1px solid;
-    float: left;
     max-width: 1200px;
   }
   
